Fix Virtual Threads unbounded